--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="style.css" rel="stylesheet" />
-<link rel="icon" href="/assets/favicon.ico"/>
+<link rel="icon" href="/assets/favicon.ico type="image/x-icon""/>
 </head>
 
 <body>
