--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="style.css" rel="stylesheet" />
-<link rel="icon" href="/assets/favicon.ico type="image/x-icon""/>
+<link rel="icon" href="/Fresh_Connect/assets/favicon.ico type="image/x-icon""/>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
   <header>
     <nav class="container" aria-label="Primary navigation">
       <div class="nav-left">
-        <img src="/assets/favicon.ico"
+        <img src="/Fresh_Connect/assets/favicon.ico"
           alt="FreshConnect logo" class="logo"/>
         <span class="site-title" aria-label="FreshConnect">FreshConnect</span>
         <!-- Navigation Links -->
