--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
       </article>
     </div>
   </section>
-  <script src="Fresh_Connect/script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
