--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="style.css" rel="stylesheet" />
   <link rel="icon" href="Fresh_Connect/assets/favicon.ico" />
+  <script src="script.js" defer></script>
+
 </head>
 
 <body>
