--- a/buyer.html
+++ b/buyer.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Guest Buyer</title>
  <link rel="stylesheet" href="/buyer.css">
- <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+ <link rel="shortcut icon" href="/Fresh_connect/assets/favicon.ico" type="image/x-icon">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <nav>
     <div class="logo-container">
-      <img src="/images/favicon.ico" alt="FoodLink logo" width="24" height="24" />
+      <img src="/Fresh_connect/assets/favicon.ico" alt="FoodLink logo" width="24" height="24" />
       <span class="logo-text">Food Connect</span>
     </div>
     <ul class="nav-links">
@@ -49,7 +50,6 @@
       <img src="https://storage.googleapis.com/a1aa/image/1a2f7fc3-97fe-490f-45e8-cdb0fcb6970c.jpg" alt="Food suppliers and buyers illustration" />
     </div>
   </section>
-<script src="script.js"></script>
   
 </body>
 </html>
