--- a/sign_in.html
+++ b/sign_in.html
@@ -4,7 +4,8 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Sign In</title>
  <link rel="stylesheet" href="/sign_in.css">
- <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+ <link rel="shortcut icon" href="/Fresh_connect/assets/favicon.ico" type="image/x-icon">
+  
 </head>
 <body>
   <div class="container" role="main" aria-label="Sign in form">
@@ -22,8 +23,8 @@
       <button type="button" class="secondary-btn" aria-label="Create a new account">Create New Account</button>
       <div class="guest-label">Continue as</div>
       <div class="guest-btns" role="group" aria-label="Guest login options">
-        <a href="/buyer.html" class="guest-btn">Guest Buyer</a>
-        <a href="/vendor.html" class="guest-btn">Guest Vendor</a>
+        <a href="/Fresh_connect/buyer.html" class="guest-btn">Guest Buyer</a>
+        <a href="//Fresh_connect/vendor.html" class="guest-btn">Guest Vendor</a>
       </div>
     </div>
   </div>
