--- a/vendor.html
+++ b/vendor.html
@@ -6,12 +6,13 @@
    Guest Seller - Food Connect
   </title>
   <link rel="stylesheet" href="/vendor.css">
-  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/Fresh_connect/assets/favicon.ico" type="image/x-icon">
+  <script src="/script.js" defer></script>
  </head>
  <body>
   <nav>
    <div class="logo-container">
-    <img alt="Green scale icon representing FoodLink logo" src="/images/favicon.ico"/>
+    <img alt="Green scale icon representing Fresh Connect logo" src="/Fresh_connect/assets/favicon.ico"/>
     <span class="logo-text">
      Food Connect
     </span>
@@ -97,6 +98,6 @@
    </div>
    <img alt="Illustration showing vendor managing orders and inventory" class="hero-image" height="300" src="https://storage.googleapis.com/a1aa/image/91da3422-1e35-46b5-5c5c-0ec4a09db1a6.jpg" width="400"/>
   </section>
-  <script src="/script.js"></script>
+  
  </body>
 </html>
