--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <!-- Right side login/signup -->
       <div class="nav-right">
-        <a href="/Fresh_connect/sign_in.html">Sign In</a>
+        <a href="sign_in.html">Sign In</a>
       </div>
       <button class="menu-toggle" aria-label="Toggle navigation">☰</button>
     </nav>
@@ -49,8 +49,8 @@
         matching.</p>
       <!-- Calls to action -->
       <nav class="hero-links" aria-label="Join links">
-        <a href="/Fresh_connect/vendor.html">Join as Vendor</a>
-        <a href="/Fresh_connect/buyer.html">Join as Buyer</a>
+        <a href="vendor.html">Join as Vendor</a>
+        <a href="buyer.html">Join as Buyer</a>
       </nav>
     </section>
 
