--- a/sign_in.html
+++ b/sign_in.html
@@ -23,8 +23,8 @@
       <button type="button" class="secondary-btn" aria-label="Create a new account">Create New Account</button>
       <div class="guest-label">Continue as</div>
       <div class="guest-btns" role="group" aria-label="Guest login options">
-        <a href="/Fresh_connect/buyer.html" class="guest-btn">Guest Buyer</a>
-        <a href="//Fresh_connect/vendor.html" class="guest-btn">Guest Vendor</a>
+        <a href="buyer.html" class="guest-btn">Guest Buyer</a>
+        <a href="vendor.html" class="guest-btn">Guest Vendor</a>
       </div>
     </div>
   </div>
