--- a/vendor.html
+++ b/vendor.html
@@ -5,7 +5,7 @@
   <title>
    Guest Seller - Food Connect
   </title>
-  <link rel="stylesheet" href="/vendor.css">
+  <link rel="stylesheet" href="vendor.css">
   <link rel="shortcut icon" href="/Fresh_connect/assets/favicon.ico" type="image/x-icon">
   <script src="/script.js" defer></script>
  </head>
