--- a/sign_in.html
+++ b/sign_in.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Sign In</title>
- <link rel="stylesheet" href="/sign_in.css">
+ <link rel="stylesheet" href="sign_in.css">
  <link rel="shortcut icon" href="/Fresh_connect/assets/favicon.ico" type="image/x-icon">
   
 </head>
