--- a/buyer.html
+++ b/buyer.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Guest Buyer</title>
- <link rel="stylesheet" href="/buyer.css">
+ <link rel="stylesheet" href="buyer.css">
  <link rel="shortcut icon" href="/Fresh_connect/assets/favicon.ico" type="image/x-icon">
   <script src="script.js" defer></script>
 </head>
