--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </p>
       </div>
       <div class="about-image">
-        <img src="/images/about_new.jpg" alt="Fresh produce distribution">
+        <img src="/Fresh_Connect/assets/about_new.jpg" alt="Fresh produce distribution">
       </div>
     </div>
   </section>
