--- a/buyer.html
+++ b/buyer.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Guest Buyer</title>
  <link rel="stylesheet" href="buyer.css">
- <link rel="shortcut icon" href="/Fresh_connect/assets/favicon.ico" type="image/x-icon">
+ <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
   <script src="script.js" defer></script>
 </head>
 <body>
   <nav>
     <div class="logo-container">
-      <img src="/Fresh_connect/assets/favicon.ico" alt="FoodLink logo" width="24" height="24" />
+      <img src="/assets/favicon.ico" alt="FoodLink logo" width="24" height="24" />
       <span class="logo-text">Food Connect</span>
     </div>
     <ul class="nav-links">
