--- a/vendor.html
+++ b/vendor.html
@@ -6,13 +6,13 @@
    Guest Seller - Food Connect
   </title>
   <link rel="stylesheet" href="vendor.css">
-  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/Fresh_Connect/assets/favicon.ico" type="image/x-icon">
   <script src="/script.js" defer></script>
  </head>
  <body>
   <nav>
    <div class="logo-container">
-    <img alt="Green scale icon representing Fresh Connect logo" src="/assets/favicon.ico"/>
+    <img alt="Green scale icon representing Fresh Connect logo" src="/Fresh_Connect/assets/favicon.ico"/>
     <span class="logo-text">
      Food Connect
     </span>
