--- a/sign_in.html
+++ b/sign_in.html
@@ -4,7 +4,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Sign In</title>
  <link rel="stylesheet" href="sign_in.css">
- <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+ <link rel="shortcut icon" href="/Fresh_Connect/assets/favicon.ico" type="image/x-icon">
   
 </head>
 <body>
