--- a/vendor.html
+++ b/vendor.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <title>
-   Guest Seller - Food Connect
+   Guest Seller - Fresh Connect
   </title>
   <link rel="stylesheet" href="vendor.css">
   <link rel="shortcut icon" href="/Fresh_Connect/assets/favicon.ico" type="image/x-icon">
@@ -14,7 +14,7 @@
    <div class="logo-container">
     <img alt="Green scale icon representing Fresh Connect logo" src="/Fresh_Connect/assets/favicon.ico"/>
     <span class="logo-text">
-     Food Connect
+     Fresh Connect
     </span>
    </div>
    <ul class="nav-links" id="nav-links">
