--- a/buyer.html
+++ b/buyer.html
@@ -12,7 +12,7 @@
   <nav>
     <div class="logo-container">
       <img src="/Fresh_Connect/assets/favicon.ico" alt="FoodLink logo" width="24" height="24" />
-      <span class="logo-text">Food Connect</span>
+      <span class="logo-text">Fresh Connect</span>
     </div>
     <ul class="nav-links">
       <li><a href="#">Products</a></li>
