--- a/buyer.html
+++ b/buyer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Guest Buyer</title>
+  <title>Guest Buyer - Fresh Connect</title>
  <link rel="stylesheet" href="buyer.css">
  <link rel="shortcut icon" href="/Fresh_Connect/assets/favicon.ico" type="image/x-icon">
   <script src="script.js" defer></script>
