--- a/vendor.html
+++ b/vendor.html
@@ -7,7 +7,7 @@
   </title>
   <link rel="stylesheet" href="vendor.css">
   <link rel="shortcut icon" href="/Fresh_Connect/assets/favicon.ico" type="image/x-icon">
-  <script src="/script.js" defer></script>
+  <script src="script.js" defer></script>
  </head>
  <body>
   <nav>
